refactor: improve code quality